# cpp-base

./: .gitignore  CMakeLists.txt
cmake/: clang-format.cmake  compile_options.cmake
datamodel/: CMakeLists.txt
datamodel/tmplt/class/cpp/: body.mustache
datamodel/tmplt/class/hpp/: body.mustache  head.mustache
datamodel/tmplt/enum/cpp/: body.mustache
datamodel/tmplt/enum/hpp/: body.mustache
datamodel/tmplt/file/cpp/: head.mustache
datamodel/tmplt/file/hpp/: foot.mustache  head.mustache
datamodel/tmplt/namespace/: foot.mustache  head.mustache
mains/: CMakeLists.txt  main_client.cpp  main_my_app.cpp  main_protoc_gen_mstch.cpp  main_server.cpp
protocols/: CMakeLists.txt  request.proto  response.proto  service.proto
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  client.cpp  my_app.cpp  protoc_gen_mstch.cpp  server.cpp
src/apps/my_app/: Consumer.cpp  Consumer.hpp  Producer.cpp  Producer.hpp
src/common/: Assert.h  CMakeLists.txt  IPersistent.hpp  IPublisher.cpp  IPublisher.hpp  ISubscriber.cpp  ISubscriber.hpp  common.h
src/common/concurrent/: Actor.cpp  Actor.hpp  Semaphore.hpp  SpinLock.h
src/common/logger/: ILoggable.hpp  Logger.cpp  Logger.hpp
src/common/test/: CMakeLists.txt  TestCommon.cpp
tst/: test_request.cpp
utils/: env.sh  headergen.sh
